worked on the css

--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div id="gameContainer">
 <h1>Magic 8 Ball</h1>
-<input type="text" id="textInput" size="50">
-<button id="clicker">Answer</button>
-<p id="magicAnswer"></p>
-  
+
+  <ul>
+    <li>Ask a Yes or No Question</li>
+  </ul>
+
+<div id="pic">
+  <img src="img/magic88.png" alt="Magic8 Ball">
+</div>
+
+<div id="container">
+  <input type="text" id="textInput" size="50">
+  <button id="clicker">Answer</button>
+</div> 
+
+  <p id="magicAnswer"></p>
+</div>
   <script src="main.js"></script>
 </body>
 </html>
